[metadata]
name = pyrt
version = 0.0.1
author = kconnour
home_page = https://github.com/kconnour/pyrt
description = A library to make radiative transfer more accessible to the yearning masses.

[options]
include_package_data = True
python_requires = >= 3.9
packages = find:
install_requires =
   numpy
   scipy

[options.extras_require]
test =
   pytest
docs =
   Sphinx
   pydata-sphinx-theme
   sphinx-gallery
